<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fencing-helper</string>
    <string name="action_settings">Settings</string>
    <string name="title_numbers_display">Numbers</string>

    <!-- Main activity properties -->

    <string name="main_choose_label_text">Choose level</string>
    <string name="main_simple_radio_text">simple</string>
    <string name="main_medium_radio_text">medium</string>
    <string name="main_hard_radio_text">hard</string>

    <string name="main_options_label_text">Options</string>
    <string name="main_random_checkbox_text">random</string>
    <string name="main_start_button_text">Start</string>

    <!-- Numbers activity properties -->

    <string name="numbers_position_label_text">Go!</string>
    <string name="numbers_range_label_text">Will be changed soon</string>
    <string name="numbers_back_button_text">Back</string>

</resources>
